<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="true">Time Check</string>
    <string name="opcion_name">Opciones</string>
    <string name="nombre_canal">Canal de notificaciones único</string>
    <string name="descripcion_canal">A través de este canal se publicarán todas las notificaciones de la app</string>

    <string-array name="array_paises">
        <item>Español</item>
        <item>Inglés</item>
        <item>Francés</item>
    </string-array>

    <string-array name="array_inci">
        <item>Sin incidencias</item>
        <item>Asuntos propios</item>
        <item>Medico</item>
        <item>Accidente Laboral</item>
    </string-array>

    <string-array name="array_empresas">
        <item>Sin Empresa</item>
        <item>Empresa_A</item>
        <item>Empresa_B</item>
        <item>Empresa_C</item>
    </string-array>

    <string name="txt_salir_app_mensaje" translatable="true">¡Adios!</string>
    <string name="txt_salir_app_titulo">¿Salir?</string>
    <string name="txt_si">Si</string>
    <string name="txt_no">No</string>

    <string name="aviso_cambio_idioma_mensaje">El cambio de idioma tendrá efecto completo en el siguiente reinicio de la app</string>
    <string name="aviso_cambio_idioma_aceptar">De acuerdo</string>
    <string name="toast_registro_fallo">Fallo en el registro</string>
    <string name="toast_registro_exito">Registro guardado</string>
    <string name="toast_introducir_password">Introduce una contraseña</string>
    <string name="toast_identificacion_fallo">Fallo de identificacion</string>
    <string name="toast_identificacion_exito">Identificacion correcta</string>

    <string name="name">Nombre</string>
    <string name="ap">Apellidos</string>
    <string name="correo">Correo electronico</string>
    <string name="contrasenya">Contraseña</string>
    <string name="configuracion">Configuración</string>
    <string name="registro">Registro</string>
    <string name="entrada">Entrada</string>
    <string name="incidencia">Incidencia</string>
    <string name="toast_introducir_nombre">Debe introducir un nombre</string>
    <string name="toast_introducir_correo">Introduce un correo</string>
    <string name="toast_introducir_apellido">Introduce un apellido</string>
    <string name="toast_introducir_longitud">La contrasela tiene que tener 6 caracteres</string>
    <string name="correo_Invalido">Correo invalido</string>
    <string name="salida">Salida</string>
    <string name="login">"Acceso"</string>
    <string name="toast_introducir_email">Introduce un correo</string>
    <string name="nav_close">Cerrar</string>
    <string name="nav_open">Abrir</string>
    <string name="salir">Salir</string>
    <string name="falloEnLaBase">Fallo en la base de datos</string>
    <string name="IndicaAntesBoton">Indica antes de presionar el boton el tipo de incidencia</string>
    <string name="toast_sin_conexion">Sin conexion a internet</string>
    <string name="recuerdame">Recordar correo y contarseña</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="selector_fecha_ini">Seleccionar fecha Inicio</string>
    <string name="selector_fecha_fin">Seleccionar fecha Fin</string>
    <string name="btn_Buscar">Buscar</string>
    <string name="HoraDeEntrada">Hora de Entrada :</string>
    <string name="HoraDeSalida">Hora de Salida :</string>
    <string name="Total">"Total: "</string>
    <string name="Guardar">Guardar</string>
    <string name="GuardarUbi">Guardar ubicacion actual</string>
    <string name="Empleados">Empleados</string>
    <string name="InfoBtnUbi">"Pulsa el Boton para guardar la ubicación del trabajo"</string>
    <string name="EligeEmpresa">Elige una empresa</string>
    <string name="empresas">Empresas</string>
    <string name="RegistroDia">Registros por Dia</string>
    <string name="Atras">Atrás</string>
    <string name="InformesDiarios">Informes Diarios</string>
    <string name="InformeRegistror">Informe por Registror</string>
    <string name="InformesSemanales">Informes Semanales</string>
    <string name="CambiarUbicación">Cambiar Ubicación</string>
    <string name="FechaInicio">Fecha inicio (YYYY/MM/DD)</string>
    <string name="FechaFin">Fecha fin (YYYY/MM/DD)</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="InformesMensuales">Informes Mensuales</string>

</resources>