<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_current_page"
                android:icon="?android:attr/actionModeFindDrawable"
                android:title="@string/InformeRegistror" />
            <item
                android:id="@+id/nav_daily_reports"
                android:icon="?android:attr/actionModeFindDrawable"
                android:title="@string/InformesDiarios" />
            <item
                android:id="@+id/nav_month_reports"
                android:icon="@android:drawable/ic_menu_week"
                android:title="@string/InformesSemanales" />

            <item
                android:id="@+id/nav_changeUbi"
                android:icon="@android:drawable/ic_menu_week"
                android:title="@string/CambiarUbicación" />
        </group>
</menu>
