<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper13"
    android:fitsSystemWindows="false"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wallpaper13"
        android:orientation="vertical"
        android:padding="30px"
        tools:context=".Admin2">

        <TextView
            android:id="@+id/tvNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegistroDia" />

        <EditText
            android:id="@+id/etFechaInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/FechaInicio"
            android:inputType="date" />

        <EditText
            android:id="@+id/etFechaFin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/FechaFin"
            android:inputType="date" />

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/InfoBtnUbi" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvInformeDiario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="#7CFFFFFF"
            android:scrollbars="horizontal|vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:listitem="@layout/registrosview" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/Atras" />

    </LinearLayout>
    <!-- Menú lateral -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />
</androidx.drawerlayout.widget.DrawerLayout>