<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    tools:context=".MainActivity3">

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wallpaper"
        android:gravity="end"
        android:orientation="vertical"
        tools:ignore="ExtraText">


        <TextView
            android:id="@+id/tvE2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="#B7F1EAEA"
            android:fontFamily="sans-serif"
            android:text="@string/HoraDeEntrada"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textViewE2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#6BF1EAEA"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="24sp" />

        <TextView
            android:id="@+id/tvS2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="#6BF1EAEA"
            android:fontFamily="sans-serif"
            android:text="@string/HoraDeSalida"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textViewS2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#6BF1EAEA"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/linear_layout_configu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="80dp"
            android:background="#4BFFFFFF">

            <Button
                android:id="@+id/btnRegistroEntrada2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:width="170dp"
                android:height="100dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/entrada"
                android:textSize="15sp"
                app:icon="@drawable/en"
                app:iconSize="50dp" />

            <Button
                android:id="@+id/btnRegistroSalida2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:width="170dp"
                android:height="100dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/salida"
                android:textSize="15sp"
                app:icon="@drawable/sa"
                app:iconSize="50dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewTotal2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif"
            android:keepScreenOn="false"
            android:overScrollMode="ifContentScrolls"
            android:scrollHorizontally="false"
            android:text="@string/Total"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IndicaAntesBoton" />

    <Spinner
        android:id="@+id/spnIncidencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="@string/incidencia" />

    </LinearLayout>
</FrameLayout>