<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_confiuj"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper13"
    android:orientation="vertical"
    tools:context=".MainActivityConf">

    <Spinner
        android:id="@+id/idiomas"
        android:layout_width="409dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etAp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Apellido"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Guardar"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:padding="10dp"
        android:text="@string/InfoBtnUbi"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnUbi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/GuardarUbi"
        android:textSize="20sp" />



</LinearLayout>